--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,8 +14,8 @@
     <%= yield %>
 
     <p>
-    <% if session[:login_uid] %>
-      ログイン中（<%= session[:login_uid] %>さん）
+    <% if current_user %>
+      ログイン中（<%= current_user.uid %>さん）
     <% else %>
       ログインしていません
     <% end %>
